@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Feb 2010; A. Vinogradov <spamslepnoga@inbox.ru>
+  +milter-greylist-4.3.4-r1.ebuild:
+  fix depend
+
   26 Jan 2010; <slep@gentoo.org> milter-greylist-4.3.4.ebuild,
   files/gentoo.initd, metadata.xml:
   test init script and delete debug messages
@@ -20,3 +24,4 @@
   +metadata.xml:
   initial commit
 
+*milter-greylist-4.2.3 (  20 Dec 2009 )
